--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
+body {
+    font-family: sans-serif;
+    background-color: rgb(210, 234, 223);
+}
 
+h1 {
+ text-align: center;
+  padding: 90px;
+}
+
+img {
+    height: 200px;
+}
